--- a/reminders.html
+++ b/reminders.html
@@ -24,6 +24,6 @@
             </ul>
         </nav>
         <div class="login">
-            <img src="" alt="Login">
+            <button class="login-btn">Log In</button>
         </div>
     </header>
