--- a/mindfulness.html
+++ b/mindfulness.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap" rel="stylesheet">">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap" rel="stylesheet">
     <title>Mindfulness Activities</title>
 </head>
 <body>
@@ -27,3 +27,7 @@
             <button class="login-btn">Log In</button>
         </div>
     </header>
+
+    <img class="big-eclipse" src="./img/big-eclipse.svg" alt="big-eclipse">
+    <img class="medium-eclipse" src="./img/mid-eclipse.svg" alt="mid-eclipse">
+    <img class="small-eclipse" src="./img/small-eclipse.svg" alt="small-eclipse">
