bug fixes and adding javascript fr buttons also reminders is almost done

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </ul>
         </nav>
         <div class="login">
-            <button class="login-btn">Log In</button>
+            <button class="login-btn" onclick="window.location='login.html'">Log In</button>
         </div>
     </header>
 
@@ -36,9 +36,9 @@
                     <p>Taking care of your emotional and mental well being is important. We are here to make it a little easier.</p>
                 </div>
                 <div class="cta">
-                    <button class="cta-select">Mood</button>
-                    <button class="cta-select">Mindfulness</button>
-                    <button class="cta-select">Reminders</button>
+                    <button class="cta-select" onclick="window.location='journal.html'">Mood</button>
+                    <button class="cta-select" onclick="window.location='mindfulness.html'">Mindfulness</button>
+                    <button class="cta-select" onclick="window.location='reminders.html'">Reminders</button>
                 </div>
             </div>
             <div class="cover">
