--- a/reminders.html
+++ b/reminders.html
@@ -26,7 +26,7 @@
             </ul>
         </nav>
         <div class="login">
-            <button class="login-btn">Log In</button>
+            <button class="login-btn" onclick="window.location='login.html'">Log In</button>
         </div>
     </header>
 
@@ -35,8 +35,8 @@
     <img class="small-eclipse" src="./img/small-eclipse.svg" alt="small-eclipse">
 
     <div class="container">
-        <input type="text" class="addTxt">
-        <button class="addBtn">
+        <input type="text" class="addTxt" placeholder="Today's Goals . . .">
+        <button class="addBtn" onclick="addElement()">
             <img src="https://picaflor-azul.com/images/plus-circle1.png">
         </button>
         <div class="list"></div>
