--- a/journal.html
+++ b/journal.html
@@ -24,7 +24,7 @@
             </ul>
         </nav>
         <div class="login">
-            <button class="login-btn">Log In</button>
+            <button class="login-btn" onclick="window.location='login.html'">Log In</button>
         </div>
     </header>
 
