--- a/login.html
+++ b/login.html
@@ -26,7 +26,7 @@
             </ul>
         </nav>
         <div class="login">
-            <button class="login-btn">Log In</button>
+            <button class="login-btn" onclick="window.location='login.html'">Log In</button>
         </div>
     </header>
 <div class="container" id="container">
