working on last minute changes

--- a/reminders.html
+++ b/reminders.html
@@ -13,7 +13,6 @@
 <body>
     <header>
         <div class="logo-container">
-            <img src="" alt="logo">
             <h4 class="logo">MoodScape</h4>
         </div>
         <nav>
@@ -22,7 +21,7 @@
                 <li><a class="nav-link" href="journal.html">Journal</a></li>
                 <li><a class="nav-link" href="mindfulness.html">Mindfulness Activities</a></li>
                 <li><a class="nav-link" href="#">Set Reminders</a></li>
-                <li><a class="nav-link" href="#">Emergency Contact Page</a></li>
+                <li><a class="nav-link" href="emergency.html">Emergency Contact Page</a></li>
             </ul>
         </nav>
         <div class="login">
