--- a/emergency.html
+++ b/emergency.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap" rel="stylesheet">
-    <title>Journal and Mood Tracker</title>
+    <title>Emergency Contact</title>
 </head>
 <body>
     <header>
@@ -16,10 +16,10 @@
         <nav>
             <ul class="nav-links">
                 <li><a class="nav-link" href="index.html">Home</a></li>
-                <li><a class="nav-link" href="#">Journal</a></li>
+                <li><a class="nav-link" href="journal.html">Journal</a></li>
                 <li><a class="nav-link" href="mindfulness.html">Mindfulness Activities</a></li>
                 <li><a class="nav-link" href="reminders.html">Set Reminders</a></li>
-                <li><a class="nav-link" href="emergency.html">Emergency Contact Page</a></li>
+                <li><a class="nav-link" href="#">Emergency Contact Page</a></li>
             </ul>
         </nav>
         <div class="login">
