--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 <body>
     <header>
         <div class="logo-container">
-            <img src="" alt="logo">
             <h4 class="logo">MoodScape</h4>
         </div>
         <nav>
@@ -20,7 +19,7 @@
                 <li><a class="nav-link" href="journal.html">Journal</a></li>
                 <li><a class="nav-link" href="mindfulness.html">Mindfulness Activities</a></li>
                 <li><a class="nav-link" href="reminders.html">Set Reminders</a></li>
-                <li><a class="nav-link" href="#">Emergency Contact Page</a></li>
+                <li><a class="nav-link" href="emergency.html">Emergency Contact Page</a></li>
             </ul>
         </nav>
         <div class="login">
@@ -42,7 +41,7 @@
                 </div>
             </div>
             <div class="cover">
-                <img src="" alt="Background photo">
+                <img src="./img/welcome.png" alt="Background photo">
             </div>
         </section>
 
